Bug 521078 - System settings crashed when i was asleep
Summary: System settings crashed when i was asleep
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: generic-crash (other bugs)
Version First Reported In: 6.6.91
Platform: CachyOS Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2026-06-05 03:41 UTC by pollux/ned
Modified: 2026-06-11 18:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.0
Sentry Crash Report: https://crash-reports.kde.org/organizations/kde/issues/275167/events/fcf12e0b4e1d428d86c0672302b2a7af/


Attachments
New crash information added by DrKonqi (87.08 KB, text/plain)
2026-06-05 03:41 UTC, pollux/ned
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pollux/ned 2026-06-05 03:41:47 UTC
Application: systemsettings (6.6.91)

ApplicationNotResponding [ANR]: false
Qt Version: 6.11.1
Frameworks Version: 6.26.0
Operating System: Linux 7.0.10-2-cachyos x86_64
Windowing System: Wayland
Distribution: CachyOS
DrKonqi: 6.6.91 [CoredumpBackend]

-- Information about the crash:
I was asleep, woke up, noticed there was a crash that happened.
System settings had crashed when i was asleep :P

The reporter is unsure if this crash is reproducible.

-- Backtrace (Reduced):
#6  0x00007f1ea5809f78 in QScreen::name (this=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/gui/kernel/qscreen.cpp:110
#7  0x00007f1e8426d796 in operator() (__closure=0x55ac841b2d50, outputOrder=<optimized out>) at /usr/src/debug/plasma-workspace/plasma-workspace-6.6.91/kcms/wallpaper/wallpapermodule.cpp:85
#8  operator() (__closure=<optimized out>) at /usr/include/qt6/QtCore/qobjectdefs_impl.h:117
#12 QtPrivate::QCallableObject<WallpaperModule::WallpaperModule(QObject*, const KPluginMetaData&)::<lambda(const QStringList&)>, QtPrivate::List<const QList<QString>&>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=<optimized out>, this_=0x55ac841b2d40, r=<optimized out>, a=<optimized out>, ret=<optimized out>) at /usr/include/qt6/QtCore/qobjectdefs_impl.h:548
#13 0x00007f1ea4ff081b in QtPrivate::QSlotObjectBase::call (this=0x55ac841b2d40, r=<optimized out>, a=0x7ffe632c2250, this=<optimized out>, r=<optimized out>, a=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobjectdefs_impl.h:462
#14 doActivate<false> (sender=0x55ac84097a90, signal_index=3, argv=0x7ffe632c2250) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobject.cpp:4372
[...]
#16 OutputOrderWatcher::outputOrderChanged (this=<optimized out>, _t1=<optimized out>) at /usr/src/debug/plasma-workspace/build/libkworkspace/kworkspace_autogen/include/moc_outputorderwatcher.cpp:119
#17 0x00007f1ea4ff081b in QtPrivate::QSlotObjectBase::call (this=0x55ac83facb60, r=<optimized out>, a=0x7ffe632c2390, this=<optimized out>, r=<optimized out>, a=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobjectdefs_impl.h:462
#18 doActivate<false> (sender=0x7ffe632c2e30, signal_index=9, argv=0x7ffe632c2390) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobject.cpp:4372
[...]
#20 QGuiApplication::screenAdded (this=<optimized out>, _t1=<optimized out>) at /usr/src/debug/qt6-base/build/src/gui/Gui_autogen/include/moc_qguiapplication.cpp:307
#21 QWindowSystemInterface::handleScreenAdded (platformScreen=platformScreen@entry=0x7f1e8800b570, isPrimary=isPrimary@entry=false) at /usr/src/debug/qt6-base/qtbase/src/gui/kernel/qwindowsysteminterface.cpp:730
#22 0x00007f1ea2f42ac7 in QtWaylandClient::QWaylandDisplay::handleScreenInitialized (this=0x55ac831ce840, screen=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/plugins/platforms/wayland/qwaylanddisplay.cpp:614
#23 0x00007f1ea2f722b6 in QtWaylandClient::QWaylandScreen::maybeInitialize (this=0x7f1e8800b570) at /usr/src/debug/qt6-base/qtbase/src/plugins/platforms/wayland/qwaylandscreen.cpp:83
#24 QtWaylandClient::QWaylandScreen::maybeInitialize (this=0x7f1e8800b570) at /usr/src/debug/qt6-base/qtbase/src/plugins/platforms/wayland/qwaylandscreen.cpp:74
#25 0x00007f1ea127643e in ffi_call_unix64 () at ../src/x86/unix64.S:104
#26 0x00007f1ea1272a5d in ffi_call_int () at ../src/x86/ffi64.c:676


Reported using DrKonqi
Comment 1 pollux/ned 2026-06-05 03:41:50 UTC
Created attachment 192900 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 2 Bug Janitor Service 2026-06-06 04:59:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6684
Comment 3 David Edmundson 2026-06-07 16:02:39 UTC
Git commit a62890b6ea37e4e255efec21ed457341ac60d378 by David Edmundson.
Committed on 07/06/2026 at 15:41.
Pushed by davidedmundson into branch 'master'.

kcms/wallpaper: Avoid storing screen as raw pointer

The screen is not owned by the WallpaperModule, nor is it cleaned up in
screenRemoved.

m_selectedScreen is already guarded in most places.

M  +2    -1    kcms/wallpaper/wallpapermodule.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/a62890b6ea37e4e255efec21ed457341ac60d378
Comment 4 David Edmundson 2026-06-11 18:26:34 UTC
Git commit d55f7f59404196b54e96fc66431a93e71b5e81b8 by David Edmundson.
Committed on 11/06/2026 at 18:26.
Pushed by davidedmundson into branch 'Plasma/6.7'.

🍒 kcms/wallpaper: Avoid storing screen as raw pointer

The screen is not owned by the WallpaperModule, nor is it cleaned up in
screenRemoved.

m_selectedScreen is already guarded in most places.


(cherry picked from commit a62890b6ea37e4e255efec21ed457341ac60d378)

Co-authored-by: David Edmundson <kde@davidedmundson.co.uk>

M  +2    -1    kcms/wallpaper/wallpapermodule.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/d55f7f59404196b54e96fc66431a93e71b5e81b8