kcms/wallpaper: Avoid storing screen as raw pointer

The screen is not owned by the WallpaperModule, nor is it cleaned up in
screenRemoved.

m_selectedScreen is already guarded in most places.

BUG: 521078