kcms/wallpaper/wallpapermodule.h
@@ -9,6 +9,7 @@
 
 #include <QQmlPropertyMap>
 #include <QScreen>
+#include <QPointer>
 
 class KConfigLoader;
 class WallpaperConfigModel;
@@ -85,7 +86,7 @@ private:
     std::unique_ptr<KConfigPropertyMap> m_wallpaperConfiguration = nullptr;
     QString m_loadedWallpaperplugin;
     QString m_currentWallpaperPlugin;
-    QScreen *m_selectedScreen = nullptr;
+    QPointer<QScreen> m_selectedScreen = nullptr;
     KConfigGroup m_wallpaperConfigGeneral;
     QString m_activityId;
     QString m_containmentIdx;
